# apulu-universe

./: .gitignore  .impeccable.md  .migration-notes.md  AGENTS.md  CLAUDE.md  Claude Design Brief — Apulu Prompt Generator.md  VAULT.md  Vawn — Noir Music Video Production Package.md  higgsfield-cinema-studio.skill  index.html  package.json  render.yaml  server.js  workflow.md
.claude/: settings.json  settings.local.json
.claude-flow/: CAPABILITIES.md  config.yaml
.obsidian/: graph.json  workspace.json  (+1 more)
.swarm/: hnsw.index  (+3 more)
projects/apulu-hq/: .gitignore  README.md  apulu_hq_shell.pyw  install_startup.ps1  pyproject.toml
projects/apulu-hq/apulu_hq/: __init__.py  config.py  db.py  importer.py  models.py  shell.py  tailer.py
projects/apulu-hq/apulu_hq/api/: app.py
projects/apulu-hq/apulu_hq/chat/: __init__.py  claude_local.py  hermes_local.py
projects/apulu-hq/apulu_hq/dispatch/: __init__.py  persist.py  runner.py  scheduler.py
projects/apulu-hq/apulu_hq/events/: __init__.py  bus.py  schema.py
projects/apulu-hq/docs/: codex-brief-phaser-map.md
projects/apulu-hq/scripts/: import_from_paperclip.py  init_db.py  run_dev.py  run_shell.py
projects/apulu-hq/tests/: conftest.py  test_api_smoke.py  test_desktop_shell.py  test_dispatcher.py  test_importer.py  test_schema.py  test_tailer.py
projects/apulu-hq/webclient/: hq-map.js  index.html  mapdata.js
projects/apulu-hq/webclient/prompt-generator/: index.html
projects/apulu-hq/webclient/prompt-generator/css/: styles.css
projects/apulu-hq/webclient/prompt-generator/js/: app.js  create.js  studio.js
(+804 files in other folders)
